--- a/home.html
+++ b/home.html
@@ -22,8 +22,8 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="assets/images/family2.jpg" alt="group of girls" >
-            <div class="carousel-caption content-right" style="margin-bottom: 25%; margin-left: -4%;color: #041D57;">
+            <img src="assets/images/new_family.jpg" alt="group of girls" >
+            <div class="carousel-caption content-right" style="margin-bottom: 25%; margin-left: -4;">
                     <div class="xs-btn-wraper">
                         <a href="index.php?page=capacity-building" class="btn btn-primary">
                             Learn More
@@ -52,8 +52,17 @@
         </a>
       
       </div>
-    <!-- Slide-->
-    <img src="assets/images/family2.jpg" alt="group of girls" class="d-block d-lg-none">
+    <!-- Moblie friendly image-->
+    <div classs="d-block d-lg-none">
+        <br>
+        <div class="jumbotron jumbotron-fluid text-center d-block d-lg-none">
+            <h1>NGO FEMDEV</h1>
+            <p class="text-dark" style="font-size: 13pt;">(Les Femmes en Mission pour le Developpement – Women with a mission for development)</p>
+        </div>
+        <img src="assets/images/new_family.jpg" alt="group of girls" class="d-block d-lg-none">
+    </div>
+
+
     <section class="xs-section-padding">
         <div class="container">
             <div class="row">
@@ -107,19 +116,31 @@
                             <h3 class="xs-title small" data-title="AREAS"> Areas We Target</h3>
                             <div class="Accom">
                                 <span class="fa fa-long-arrow-right"></span>
-                                <span class="title"><p>Girls, out-of school youth and women’s health and safety,  </p></span>
+                                <span class="title"><p>Out-of school youth and women’s health and safety  </p></span>
                             </div>
                             <div class="Accom">
                                 <span class="fa fa-long-arrow-right"></span>
-                                <span class="title"><p>Sustainable development,   </p></span>
+                                <span class="title"><p>Sustainable development   </p></span>
                             </div>
                             <div class="Accom">
                                 <span class="fa fa-long-arrow-right"></span>
-                                <span class="title"><p>Poverty, and unemployment   </p></span>
+                                <span class="title"><p>Save the Girls Initiative   </p></span>
                             </div>
                             <div class="Accom">
                                 <span class="fa fa-long-arrow-right"></span>
-                                <span class="title"><p>Disease reduction.</p></span>
+                                <span class="title"><p>Disease reduction </p></span>
+                            </div>
+                            <div class="Accom">
+                                <span class="fa fa-long-arrow-right"></span>
+                                <span class="title"><p>Reduction of poverty and unemployment </p></span>
+                            </div>
+                            <div class="Accom">
+                                <span class="fa fa-long-arrow-right"></span>
+                                <span class="title"><p>Entertainment Education </p></span>
+                            </div>
+                            <div class="Accom">
+                                <span class="fa fa-long-arrow-right"></span>
+                                <span class="title"><p>Spiritual, social and economic development </p></span>
                             </div>
                             <div class="acomplishemts-btn">
                                 <a href="index.php?page=projects-and-needs" class="btn btn-primary">
